--- a/main.html
+++ b/main.html
@@ -9,16 +9,17 @@
   <title>GIT</title>
 </head>
 <body>
-  
+
   <!-- Start-Header -->
   <header class="header">
     <div class="container">
-
+      <h1 class="header-title">
+        Hello World
+      </h1>
     </div>
   </header>
   <!-- End-Header -->
 
-  
    <!-- Start-Footer -->
   <footer class="footer">
     <div class="container">
@@ -26,6 +27,5 @@
     </div>
   </footer>
    <!-- End-Footer -->
-
 </body>
 </html>
