--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
   <header class="header">
     <div class="container">
       <h1 class="header-title">
-        Hello World
+        Hello World 1
       </h1>
     </div>
   </header>
@@ -23,7 +23,9 @@
    <!-- Start-Footer -->
   <footer class="footer">
     <div class="container">
-
+      <h1 class="header-title">
+        Hello World 2
+      </h1>
     </div>
   </footer>
    <!-- End-Footer -->
