--- a/main.html
+++ b/main.html
@@ -23,9 +23,23 @@
    <!-- Start-Footer -->
   <footer class="footer">
     <div class="container">
-      <h1 class="header-title">
-        Hello World 2
-      </h1>
+
+
+      <div class="footer-wrap">
+        <p class="footer-text">
+          Привет я какой-то новый текст тут по кайфу
+        </p>
+        <ul>
+          <li>
+            <a href="#">1</a>
+          </li>
+          <li>
+            <a href="#">2</a>
+          </li>
+        </ul>
+      </div>
+     
+      
     </div>
   </footer>
    <!-- End-Footer -->
