--- a/main.html
+++ b/main.html
@@ -36,6 +36,12 @@
           </li>
         </ul>
       </div>
+
+      <form class="footer-form">
+        <input class="footer-inputs" type="text">
+        <input class="footer-inputs" type="text">
+      </form>
+
     </div>
   </footer>
    <!-- End-Footer -->
