--- a/main.html
+++ b/main.html
@@ -20,6 +20,21 @@
   </header>
   <!-- End-Header -->
 
+  <!-- End-Сustom -->
+  <section class="custom">
+    <div class="containenr">
+      <div class="custom-wrap">
+        <h2 class="custom-title">
+          Продажа Трусов
+        </h2>
+        <p class="custom text">
+          Очень приятно слушать Вас и смотреть Ваши видео. Вы всегда так просто рассказываете о сложном. Ведь пока не разберешься, кажется все таким сложным. Спасибо Вам за это!
+        </p>
+      </div>
+    </div>
+  </section>
+  <!-- End-Сustom -->
+
    <!-- Start-Footer -->
   <footer class="footer">
     <div class="container">
@@ -36,12 +51,10 @@
           </li>
         </ul>
       </div>
-
       <form class="footer-form">
         <input class="footer-inputs" type="text">
         <input class="footer-inputs" type="text">
       </form>
-
     </div>
   </footer>
    <!-- End-Footer -->
