--- a/main.html
+++ b/main.html
@@ -10,7 +10,29 @@
 </head>
 <body>
 
-  
+  <header class="header">
+    <div class="container">
+      <ul>
+        <li><a href=""></a><a href=""></a><a href=""></a><a href=""></a><a href=""></a></li>
+        <li><a href=""></a><a href=""></a><a href=""></a><a href=""></a><a href=""></a></li>
+        <li><a href=""></a><a href=""></a><a href=""></a><a href=""></a><a href=""></a></li>
+        <li><a href=""></a><a href=""></a><a href=""></a><a href=""></a><a href=""></a></li>
+        <li><a href=""></a><a href=""></a><a href=""></a><a href=""></a><a href=""></a></li>
+      </ul>
+    </div>
+  </header>
 
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-wrap">
+        <div class="test">
+          <ul>
+            <li><a href=""><ico>ICONKA</ico></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
+  
 </body>
 </html>
